--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "ioredis": "^5.8.2",
-    "jspdf": "^4.0.0",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
@@ -134,9 +134,9 @@
     "esbuild": "^0.25.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "tsx": "^4.21.0",
-    "typescript": "^5.6.3",
-    "vite": "^7.3.0"
+    "tsx": "^4.20.5",
+    "typescript": "5.6.3",
+    "vite": "^7.1.9"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
